# fastapi-project

./: .env.example  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLEAN_ARCHITECTURE.md  GEMINI.md  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  lefthook.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/: integration-test-generator.skill
.claude/skills/integration-test-generator/: SKILL.md
.claude/skills/integration-test-generator/references/: integration.md
.cursor/rules/: CRUD層のDBセッション依存ルール.mdc
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: coding_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
alembic/versions/: 1facbddbfb63_add_timestamps_to_subtasks.py  568e868587df_.py  92c9853173bb_initial_migration_user_and_todo_models.py  a806b45bf417_initial_migration_user_and_todo_models.py  c038e874cc8b_.py  c043c4376f56_add_subtasks_table.py
app/: router.py
app/api/dtos/: todo_dto.py
app/api/endpoints/: __init__.py  todo.py  todos.py  user.py
app/clean/api/: pyproject.toml
app/clean/api/dtos/: todo_dto.py  user_dto.py
app/clean/api/endpoints/: todo.py  todos.py  user.py
app/clean/composition/: di.py
app/clean/core/: config.py  pyproject.toml
app/clean/domain/: pyproject.toml
app/clean/domain/entities/: todo.py  user.py
app/clean/domain/repositories/: todo_repository.py  user_repository.py
app/clean/infrastructure/: pyproject.toml
app/clean/infrastructure/database/: connection.py  models.py
app/clean/infrastructure/repositories/: sqlalchemy_todo_repository.py  sqlalchemy_user_repository.py
app/clean/services/: pyproject.toml  todo_service.py
app/clean/todo/services/: todo_service.py
app/clean/usecases/: __init__.py  create_todo_usecase.py
app/clean/usecases/todo/: create_todo_usecase.py  delete_todo_usecase.py  di.py  get_todo_by_id_usecase.py  get_todos_usecase.py  update_todo_usecase.py
app/common/: __init__.py
app/common/response/: __init__.py  response_code.py  response_schema.py
app/composition/: __init__.py  common.py  di.py  todo.py  user.py
app/controller/: __init__.py  subtask_controller.py  todo_controller.py  user_controller.py
app/controller/dto/: __init__.py  subtask_dto.py  todo_dto.py  user_dto.py
app/core/: __init__.py  config.py  database.py
app/core/middleware/: __init__.py  exception_handlers.py
app/di/: __init__.py  common.py  subtask.py  todo.py  user.py
app/domain/: __init__.py  subtask.py
app/domain/entities/: __init__.py  subtask.py  todo.py  user.py
app/domain/exceptions/: __init__.py  base.py  business.py  infrastructure.py  resource.py  system.py
app/domain/repositories/: __init__.py  subtask_repository.py  todo_repository.py  user_repository.py
app/domain/services/: __init__.py  subtask_domain_service.py  todo_domain_service.py  transaction_manager.py  user_domain_service.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  connection.py  models.py
app/infrastructure/repositories/: __init__.py  base_repository.py  sqlalchemy_subtask_repository.py  sqlalchemy_todo_repository.py  sqlalchemy_user_repository.py
app/infrastructure/services/: __init__.py  sqlalchemy_transaction_manager.py
app/services/: todo_service.py
app/todo/api/: router.py  todo.py
app/todo/crud/: crud_todo.py
app/todo/models/: todo.py
app/todo/schemas/: todo.py
app/todo/service/: todo_service.py
app/usecases/subtask/: __init__.py  create_subtask_usecase.py
app/usecases/todo/: __init__.py  create_todo_usecase.py  delete_todo_usecase.py  get_todo_by_id_usecase.py  get_todos_usecase.py  update_todo_usecase.py
app/usecases/user/: __init__.py  create_user_usecase.py  delete_user_usecase.py  get_user_by_id_usecase.py  get_users_usecase.py  update_user_usecase.py
common/response/: response_schema.py
docs/: E2E_TEST_CODING_STANDARDS.md  coding_guide.md  development_flow.md  test_strategy.md  test_strategy_controller.md  test_strategy_repository.md  開発の流れ.md
docs/coding/: controller.md  dependency_policy.md  domain.md  exception_policy.md  repository.md  usecase.md
docs/test/: e2e.md  integration.md  test_strategy.md
docs/test/unit/: controller.md  domain.md  domain_service.md  repository.md  usecase.md
scripts/: check_dependencies.py
tests/e2e/: conftest.py  test_create_todo.py  test_create_todo_e2e.py  test_subtask_create_subtask.py  test_todo_create_todo.py  test_user_create_user.py  test_user_delete_user.py
tests/integration/: conftest.py  test_create_todo_usecase_e2e.py  test_subtask_create_subtask.py  test_todo_create_todo.py  test_todo_get_todo.py  test_user_create_user.py  test_user_delete_user.py
tests/unit/: test_delete_user_cascade.py  test_exception_handlers.py
tests/unit/api/: test_todo_dto.py
tests/unit/controller/: exception_cases.py  test_subtask_controller_create_subtask.py  test_todo_controller_create_todo.py  test_user_controller_create_user.py
tests/unit/core/: test_exception_handlers.py
tests/unit/domain/: test_subtask.py  test_user_domain_service_validate_user_uniqueness.py  test_user_entity.py
tests/unit/infrastructure/: conftest.py  test_sqlalchemy_todo_repository_find_by_id.py
tests/unit/repositories/: conftest.py  test_sqlalchemy_todo_repository.py  test_sqlalchemy_todo_repository_create.py  test_sqlalchemy_todo_repository_update.py  test_sqlalchemy_user_repository_create.py  test_sqlalchemy_user_repository_update.py
tests/unit/services/: test_todo_service.py  test_todo_service_3_tier.py  test_todo_service_clean.py  test_todo_service_tier.py
tests/unit/usecase/: conftest.py  test_create_subtask_usecase.py  test_create_todo_success.py  test_create_todo_usecase.py  test_create_user_failure.py  test_create_user_usecase.py  test_delete_todo_usecase.py  test_delete_user_usecase.py  test_get_todo_by_id_usecase.py  test_get_todos_usecase.py  test_get_user_by_id_usecase.py  test_get_users_usecase.py  test_update_todo_usecase.py  test_update_user_usecase.py
(+54 files in other folders)
