# =============================================================================
# Core Layer Configuration
# =============================================================================
# Inherits common settings from root pyproject.toml
# Only layer-specific configurations are defined here

[project]
name = "core"
version = "0.1.0"
description = "Core layer - Configuration, settings, common utilities"
requires-python = ">=3.12"
dependencies = [
    # Core provides common utilities - can be used by all layers
    # NO dependencies on other internal layers
    
    # Configuration and settings
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",  # For database configuration
]

# Core layer mypy restrictions are configured in root pyproject.toml
# This layer has moderate settings for configuration and utilities
# Core is shared utilities - NO dependencies on other app layers

# =============================================================================
# Core Layer Clean Architecture Enforcement
# =============================================================================
# Core layer provides utilities and configuration for all layers
# Must NOT depend on any business logic layers

# Enable TID251 rule for this layer
[tool.ruff.lint]
select = ["TID251"]  # banned-api (Clean Architecture enforcement)

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Layer dependencies - Core cannot depend on business layers
"app.clean.domain" = { msg = "❌ Core cannot depend on Domain layer. Core provides utilities only." }
"app.clean.services" = { msg = "❌ Core cannot depend on Services layer. Core provides utilities only." }
"app.clean.infrastructure" = { msg = "❌ Core cannot depend on Infrastructure layer. Core provides utilities only." }
"app.clean.api" = { msg = "❌ Core cannot depend on API layer. Core provides utilities only." }

# Web frameworks - Core should remain framework-agnostic for configuration
"fastapi" = { msg = "❌ FastAPI not allowed in core layer. Core should provide framework-agnostic configuration." }