# =============================================================================
# Domain Layer Configuration
# =============================================================================
# Inherits common settings from root pyproject.toml
# Only layer-specific configurations are defined here

[project]
name = "domain"
version = "0.1.0"
description = "Domain layer - Core business logic and entities"
requires-python = ">=3.12"
dependencies = [
    # Domain layer has NO external dependencies
    # Only standard library is allowed
]

# Domain layer mypy restrictions are configured in root pyproject.toml
# This layer has the strictest settings to ensure business logic quality