# =============================================================================
# Infrastructure Layer Configuration
# =============================================================================
# Inherits common settings from root pyproject.toml
# Only layer-specific configurations are defined here

[project]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure layer - Database, external services, frameworks"
requires-python = ">=3.12"
dependencies = [
    # Infrastructure can depend on Domain and Core layers
    "domain @ file://../../domain",
    "core @ file://../../core",
    
    # Database and ORM dependencies
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
]

# Infrastructure layer mypy restrictions are configured in root pyproject.toml  
# This layer has relaxed settings due to SQLAlchemy and external library constraints