# =============================================================================
# Infrastructure Layer Configuration
# =============================================================================
# Inherits common settings from root pyproject.toml
# Only layer-specific configurations are defined here

[project]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure layer - Database, external services, frameworks"
requires-python = ">=3.12"
dependencies = [
    # Infrastructure can depend on Domain and Core layers
    "domain @ file://../../domain",
    "core @ file://../../core",
    
    # Database and ORM dependencies
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
]

# Infrastructure layer mypy restrictions are configured in root pyproject.toml  
# This layer has relaxed settings due to SQLAlchemy and external library constraints

# =============================================================================
# Infrastructure Layer Clean Architecture Enforcement
# =============================================================================
# Infrastructure layer can use SQLAlchemy, database drivers, external services
# Must NOT know about web framework details (FastAPI)

# Enable TID251 rule for this layer
[tool.ruff.lint]
select = ["TID251"]  # banned-api (Clean Architecture enforcement)

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Layer dependencies - Infrastructure cannot depend on API layer
"app.clean.api" = { msg = "❌ Infrastructure cannot depend on API layer. Dependency direction violated." }

# Web frameworks - Infrastructure should not know about API details
"fastapi" = { msg = "❌ FastAPI not allowed in infrastructure layer. Infrastructure should not know about web framework details." }
"fastapi.APIRouter" = { msg = "❌ FastAPI routers not allowed in infrastructure layer." }
"fastapi.Request" = { msg = "❌ FastAPI request objects not allowed in infrastructure layer." }
"fastapi.HTTPException" = { msg = "❌ FastAPI exceptions not allowed in infrastructure layer." }

# HTTP clients - Infrastructure can use these for external service integration
# "httpx" = NOT listed = allowed
# "requests" = NOT listed = allowed

# SQLAlchemy and database drivers are NOT listed here = implicitly allowed